Fixed placeholder text not showing properly
Fix provided by Fisch at
https://phabricator.wikimedia.org/T173563#3678825

--- a/modules/ext.advancedSearch.css
+++ b/modules/ext.advancedSearch.css
@@ -176,3 +176,7 @@
 	font-size: 110%;
 	color: #999;
 }
+
+.mw-advancedSearch-container input {
+	width: 100%;
+}
